--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
+argcomplete==1.10.0
+beautifulsoup4==4.8.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
+docx2txt==0.8
+EbookLib==0.17.1
+extract-msg==0.23.1
 Flask==1.1.1
+IMAPClient==2.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
+lxml==4.5.0
 MarkupSafe==1.1.1
-pdfminer.six==20191020
+olefile==0.46
+pdfminer.six==20181108
+Pillow==7.1.1
 pycryptodome==3.9.4
+python-pptx==0.6.18
+pytz==2019.3
 six==1.14.0
 sortedcontainers==2.1.0
+soupsieve==2.0
+SpeechRecognition==3.8.1
+textract==1.6.3
+tzlocal==1.5.1
 Werkzeug==1.0.0
+xlrd==1.2.0
+XlsxWriter==1.2.8
